Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10850

Auto expand of QTreeWidget does not work correctly if animated mode is on

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.0
    • 4.6.2
    • Widgets: Itemviews
    • None
    • d33268507b4a5f4a30ee0b24db45d4b79ef8f1c3

      Included is a test case to reproduce the issue by following the steps:

      -leave all nodes collapsed
      -drag node "Node C" onto node "Node A-5-a" (located below "Node A" and "Node A-5")

      --> autoexpand works only for "Node A", but not for "Node A-5"
      --> if animated == off, it works like expected

        1. patch_462.txt
          2 kB
        2. reproduce.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vfm Thierry Bastian (closed Nokia identity) (Inactive)
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes