Auto expand of QTreeWidget does not work correctly if animated

The problem was that the internal state of the tree was not correctly
reset. Patch comes from the task.

Task-number: QTBUG-10850