src/gui/itemviews/qtreeview.cpp
@@ -2871,13 +2871,13 @@ void QTreeViewPrivate::expand(int item, bool emitSignal)
     if (emitSignal && animationsEnabled)
         prepareAnimatedOperation(item, QVariantAnimation::Forward);
 #endif //QT_NO_ANIMATION
-    QAbstractItemView::State oldState = state;
+    stateBeforeAnimation = state;
     q->setState(QAbstractItemView::ExpandingState);
     const QModelIndex index = viewItems.at(item).index;
     storeExpanded(index);
     viewItems[item].expanded = true;
     layout(item);
-    q->setState(oldState);
+    q->setState(stateBeforeAnimation);
 
     if (model->canFetchMore(index))
         model->fetchMore(index);
@@ -2946,7 +2946,7 @@ void QTreeViewPrivate::collapse(int item, bool emitSignal)
         prepareAnimatedOperation(item, QVariantAnimation::Backward);
 #endif //QT_NO_ANIMATION
 
-    QAbstractItemView::State oldState = state;
+    stateBeforeAnimation = state;
     q->setState(QAbstractItemView::CollapsingState);
     expandedIndexes.erase(it);
     viewItems[item].expanded = false;
@@ -2956,7 +2956,7 @@ void QTreeViewPrivate::collapse(int item, bool emitSignal)
         index = viewItems[index].parentItem;
     }
     removeViewItems(item + 1, total); // collapse
-    q->setState(oldState);
+    q->setState(stateBeforeAnimation);
 
     if (emitSignal) {
         emit q->collapsed(modelIndex);
@@ -3067,7 +3067,7 @@ QPixmap QTreeViewPrivate::renderTreeToPixmapForAnimation(const QRect &rect) cons
 void QTreeViewPrivate::_q_endAnimatedOperation()
 {
     Q_Q(QTreeView);
-    q->setState(QAbstractItemView::NoState);
+    q->setState(stateBeforeAnimation);
     q->updateGeometries();
     viewport->update();
 }
